# so_pysm_models

./: .gitmodules  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  ah_bootstrap.py  environment.yml  setup.cfg  setup.py
docs/: conf.py  gettingstarted.rst  highres_templates.rst  index.rst  models.rst  requirements.txt
docs/so_pysm_models/: gettingstarted.rst  index.rst  models.rst
licenses/: LICENSE.rst
so_pysm_models/: __init__.py  alms.py  co_lines.py  dust.py  extragalactic.py  filter_utils.py  get_so_model.py  interpolating.py  laws.py  so_models.py  synchrotron.py
so_pysm_models/interpolating/: README.md  __init__.py
so_pysm_models/tests/: setup_package.py  test_alms.py  test_cmb.py  test_co.py  test_dust.py  test_extragalactic.py  test_intepolating.py  test_so_models.py  test_synchrotron.py
so_pysm_models/tests/data/: Planck_bestfit_alm_seed_583_lmax_100_K_CMB.fits  map_nside_32_from_Planck_bestfit_alm_seed_583_K_CMB.fits  only_zip
so_pysm_models/utils/: __init__.py  add_small_scales.py  generate_html_directory_index.py  rotate_maps.py  submit.slurm  submit_ud_grade.slurm  ud_grade_maps.py
