[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = so_pysm_models
description = PySM sky components models for PySM
long_description = 
author = A. Zonca
author_email = zonca@sdsc.edu
license = BSD 3-Clause
url = https://github.com/simonsobs/so_pysm_models
edit_on_github = True
github_project = simonsobs/so_pysm_models
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, healpy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.2.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

# astropy-package-template-example = packagename.example_mod:main

